# craigslist-data

./: .dockerignore  .env  Dockerfile  Makefile  data.json  pyproject.toml
.github/workflows/: daily-update.yml
craigslist_data/: __init__.py  cli.py  core.py  schema.py
